Package: matrixTests
====================

Version: 0.1.4 [TBD]

IMPROVEMENTS:

o Improved the speed of Wilcoxon and Kruskal Wallis tests.

TESTS:

o Added run time benchmarks.
o Expanded test coverage to include all lines within code at least once.
o Added more tests for ties in row_kruskalwallis


Version: 0.1.3 [2019 Jun 10]

NEW FEATURES:

o Added Wilcoxon tests: `row_wilcox_onesample`, `row_wilcox_paired` and `row_wilcox_twosample` plus column version equivalents.

BUG FIXES:

o Warning messages for column-wise functions no longer warn about rows and specifies columns instead.

DOCUMENTATION:

o Small adjustments to some documentation files (spelling mistakes, ordering, etc).


Version: 0.1.2 [2019 Apr 05]

NEW FEATURES:

o Added Jarque Bera test: `row_jarquebera` and `col_jarquebera`.
o Added Fligner-Killeen test: `row_flignerkilleen` and `col_flignerkilleen`.

BUG FIXES:

o The warning messages are no longer repeated 3 times in cases when the call has a namespace (i.e. matrixTests::row_bartlett).


Version: 0.1.1 [2019 Mar 15]

DOCUMENTATION:

o Improved help documentation.

TESTS:

o Fixed an indexing bug in `row_cor_pearson()` monte-carlo test.

CHANGES:

o row_ievora and col_ievora "g" (group) parameter was renamed to "b" (binary).


Version: 0.1.0 [2018 Mar 5]

NEW FEATURES:

o Created and submitted to CRAN.
