@@ -6,6 +6,7 @@ Version: 0.1.4 [TBD]
 IMPROVEMENTS:
 
 o Improved the speed of Wilcoxon and Kruskal Wallis tests.
+o Improved the speed of Oneway tests.
 
 TESTS:
 
